# LAN_TCP_RockPaperScissors

./: CMakeLists.txt  README.md  vcpkg.json
Client/include/: Client.h  TempFunctions.h
Client/src/: Client.cpp  Main.cpp
Common/include/: AsciiArt.h  ClientStates.h  GameRules.h  MyPacket.h
Common/src/: GameRules.cpp  MyPacket.cpp  Window.cpp
Server/: CMakeLists.txt
Server/include/: Server.h  ServerStates.h
Server/src/: Main.cpp  Server.cpp
